data/derived/sp14/progs/unify/prog3421.ml.out
Characters 67-71:
  | VarX -> Format.printf "%s" VarX;;
                               ^^^^
Error: This expression has type expr but an expression was expected of type
         string
